force-app/main/default/objects/CCX_Returns__c/CCX_Returns__c.object-meta.xml
<CustomObject>
    <label>CCX_Returns</label>
    <nameField>
        <displayFormat>RId-{000}</displayFormat>
        <label>RId</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CCX_Returns</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>