force-app/main/default/objects/CCX_Returns__c/fields/CCX_Product__c.field-meta.xml
<CustomField>
    <fullName>CCX_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CCX_Product</label>
    <referenceTo>CCX_Product__c</referenceTo>
    <relationshipLabel>CCX_Returns</relationshipLabel>
    <relationshipName>CCX_Returns</relationshipName>
    <type>Lookup</type>
</CustomField>