force-app/main/default/objects/CCX_Returns__c/fields/CCX_Supplier__c.field-meta.xml
<CustomField>
    <fullName>CCX_Supplier__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CCX_Supplier</label>
    <referenceTo>CCX_Supplier__c</referenceTo>
    <relationshipLabel>CCX_Returns</relationshipLabel>
    <relationshipName>CCX_Returns</relationshipName>
    <type>Lookup</type>
</CustomField>