force-app/main/default/objects/CCX_Returns__c/fields/DateOfReturn__c.field-meta.xml
<CustomField>
    <fullName>DateOfReturn__c</fullName>
    <label>DateOfReturn</label>
    <type>Date</type>
</CustomField>