force-app/main/default/objects/CCX_Returns__c/fields/Reason_For_Return__c.field-meta.xml
<CustomField>
    <fullName>Reason_For_Return__c</fullName>
    <label>Reason For Return</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Damaged Product</fullName>
            </value>
            <value>
                <fullName>Quality Issue</fullName>
            </value>
            <value>
                <fullName>Less Quantity</fullName>
            </value>
            <value>
                <fullName>Component Missing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>