force-app/main/default/objects/CCX_Returns__c/fields/TypeOfReturn__c.field-meta.xml
<CustomField>
    <fullName>TypeOfReturn__c</fullName>
    <label>TypeOfReturn</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sales Return</fullName>
            </value>
            <value>
                <fullName>Purrchase Return</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>