force-app/main/default/objects/CCX_Returns__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>TypeOfReturn__c</columns>
    <columns>Reason_For_Return__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>